logs/redturtle.speedupui.pathbar.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/redturtle'...
Listing './lib/python3.5/site-packages/redturtle/speedupui'...
Listing './lib/python3.5/site-packages/redturtle/speedupui/pathbar'...
Listing './lib/python3.5/site-packages/redturtle/speedupui/pathbar/browser'...
Compiling './lib/python3.5/site-packages/redturtle/speedupui/pathbar/browser/navigation.py'...
***   File "./lib/python3.5/site-packages/redturtle/speedupui/pathbar/browser/navigation.py", line 48
    print context
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/redturtle/speedupui/pathbar/profiles'...
Listing './lib/python3.5/site-packages/redturtle/speedupui/pathbar/profiles/default'...
Listing './lib/python3.5/site-packages/redturtle.speedupui.pathbar-0.2.0a0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
